# gpx_tools

./: .gitignore  AUTHORS  CHANGELOG  Makefile  Makefile.in  NEWS  README  README.md  TODO  config.h.in  configure  configure.ac  gpxrewrite.c  ini_settings.c  ini_settings.h  mem_str.c  mem_str.h  settings.ini  waypoint.c  waypoint.h
doc/: CHANGELOG  GPX_LABELS  Makefile.am  Makefile.in  commands  sample-settings.ini  smart_truncation
src/: Makefile.am  Makefile.in  gpxfilter.c  gpxinfo.c  gpxrewrite.c  include.h  ini_settings.c  ini_settings.h  mem_str.c  mem_str.h  waypoint.c  waypoint.h
